--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
 
 
 
-        
+         
   </style>
 
 <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
-
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -217,7 +216,8 @@
   
       <!-- Card 2 -->
       <div class="service-card">
-        <img src="assets/DATA_INSIGTS.png" alt="Data Insights">
+        <img src="assets/data_insights.jpeg" alt="Data Insights" i
+        style="object-fit: cover;">
         <h5>Data Insights</h5>
         <p>Detailed air quality reports and analysis to help identify trends and improve your spaces.</p>
         <a href="#">Read more</a>
@@ -292,7 +292,7 @@
               <p>To provide a better experience, we utilize key parameters such as real-time data accuracy, sensor calibration, and network reliability to ensure smooth data transmission. Our teams leverage advanced software tools like data analytics platforms, cloud services, and monitoring dashboards to process and display AQI data efficiently. These tools help in tracking air quality updates and delivering timely, actionable insights. By combining robust infrastructure and intelligent software, we ensure a seamless and user-friendly service. </p>
             </div>
             <div class="feature-card2-right">
-                <img src="./assets/laptop-2298286_1920.png" alt="" class="card2-slider">
+                <img src="./assets/software_pic.png" alt="" class="card2-slider" style="margin-top: 50px; width: 350px;">
             </div>
         </div>
 
