--- a/airmonitor.html
+++ b/airmonitor.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="indoor-air-monitor-right" data-aos="fade-left">
-                <img src="./assets/close-up-finger-setting-alarm.jpg" alt="">
+                <img src="./assets/aqms_pointing.jpeg" alt="">
             </div>
         </div>
         
