--- a/airmonitor.html
+++ b/airmonitor.html
@@ -50,7 +50,19 @@
         </div>
 
         <div class="air-monitor-btn">
-            <button class="banner-text-btn"><p>Contact Us</p></button>
+            <!-- <button class="banner-text-btn"><p>Contact Us</p></button> -->
+             <a href="#contact_us.html"></a>
+            <dotlottie-player
+  src="https://lottie.host/32e99c9c-d833-4dfc-8f50-19ab2521dcab/DgSL4JJuDk.lottie"
+  background="transparent"
+  speed="1"
+  style="width: 200px; height: 150px; cursor: pointer;"
+  loop
+  autoplay
+  onclick="window.location.href='contact-us.html';"
+></dotlottie-player>
+
+
         </div>
     </section> 
 
@@ -66,7 +78,7 @@
                 </div>
             </div>
             <div class="indoor-air-monitor-right" data-aos="fade-left">
-                <img src="./assets/aqms_pointing.jpeg" alt="">
+                <img src="./assets/aqms3_pointing.png" alt="">
             </div>
         </div>
         
