--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
               <p>To provide a better experience, we utilize key parameters such as real-time data accuracy, sensor calibration, and network reliability to ensure smooth data transmission. Our teams leverage advanced software tools like data analytics platforms, cloud services, and monitoring dashboards to process and display AQI data efficiently. These tools help in tracking air quality updates and delivering timely, actionable insights. By combining robust infrastructure and intelligent software, we ensure a seamless and user-friendly service. </p>
             </div>
             <div class="feature-card2-right">
-                <img src="./assets/software_pic.png" alt="" class="card2-slider" style="margin-top: 50px; width: 350px;">
+                <img src="./assets/software_pic.png" alt="" class="card2-slider" style=" width: 350px;">
             </div>
         </div>
 
