--- a/contact-us.html
+++ b/contact-us.html
@@ -196,7 +196,7 @@
 
         <div class="service_card4">
           <img src="./assets/motor_controller (1).png" alt="Motor Controller" />
-          <h3>Motor Controller</h3>
+          <h3>EV Motor Controller</h3>
           <p>
             Efficient motor control solutions for automotive and industrial
             applications.
