--- a/contact-us.html
+++ b/contact-us.html
@@ -184,7 +184,7 @@
 
         <div class="service_card3">
           <img
-            src="./assets/aqms_device_about_us.jpg"
+            src="./assets/PS-3.jpg"
             alt="Inner Air Quality Monitoring"
           />
           <h3>Inner Air Quality Monitoring</h3>
@@ -218,6 +218,18 @@
             alt="Pressure Sensors"
           />
           <h3>Pressure Sensors</h3>
+          <p>
+            Solvent and differential pressure sensors for precise measurements
+            in industrial environments.
+          </p>
+        </div>
+
+        <div class="service_card7">
+          <img
+            src="./assets/p-sensor.png"
+            alt="Differential Pressure Sensors"
+          />
+          <h3>Differential Pressure Sensors</h3>
           <p>
             Solvent and differential pressure sensors for precise measurements
             in industrial environments.
