--- a/contact-us.html
+++ b/contact-us.html
@@ -256,7 +256,7 @@
     </section>
 
 
-    <div class="contact_container">
+    <div id="contact_container" class="contact_container">
 
       
 <dotlottie-player
