--- a/face-mask.html
+++ b/face-mask.html
@@ -155,7 +155,7 @@
             <div class="articles-grid">
                 <!-- Updated paths to point to articles/ subfolder -->
                 <a href="articles/air-pollution.html" class="article-card">
-                    <img src="assets/air_pollution.jpg" alt="Air pollution">
+                    <img src="assets/air_pollution (1).jpg" alt="Air pollution">
                     <div class="article-info">
                         <h3>What is Air Pollution?</h3>
                         <p class="excerpt">See more</p>
