--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
         
         <div class="image-section" id="nature_inspired_inovation">
-          <img src="assets/h-car.png" alt="Tecsage Technovations">
+          <img src="assets/Untitled design (10).png" alt="Tecsage Technovations">
             <!-- <div class="slider-container">
                <div class="slider-track">
                 <div class="slide-p">
