--- a/contact-us.html
+++ b/contact-us.html
@@ -38,10 +38,12 @@
       <a href="index.html"><img src="assets/tecsage-logo.png" alt="Company Logo" width="170">
       <ul class="nav-links">
         <li><a href="airmonitor.html">Air Monitor</a></li>
-        <li><a href="airpurifier.html">Air Purifier</a></li>
+        <!-- <li><a href="airpurifier.html">Air Purifier</a></li> -->
+         <li><a href="contact-us.html">Our Services</a></li>
         <li><a href="face-mask.html">Learn</a></li>
         <li><a href="news.html">News</a></li>
-        <li><a href="contact-us.html">About Us</a></li>
+        <!-- <li><a href="contact-us.html">About Us</a></li> -->
+         <li><a href="touch.html" id="contact-btn">Contact Us</a></li>
       </ul>
       <div class="hamburger" onclick="toggleMenu()">
         <span></span>
@@ -239,7 +241,7 @@
     </section>
 
  
-
+<!-- 
     <section class="contact-us-banner">
       <img src="./assets/CONTACT-NEW-PHOTO.jpeg" alt="Contact Us Banner" />
       <div class="overlay"></div>
@@ -393,7 +395,18 @@
         }
       });
     </script>
-    
+     -->
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- <script>
       document
