--- a/face-mask.html
+++ b/face-mask.html
@@ -25,10 +25,12 @@
         <!-- <a href="index.html" class="logo">Tecsage Innovation</a> -->
         <ul class="nav-links">
             <li><a href="airmonitor.html">Air Monitor</a></li>
-            <li><a href="airpurifier.html">Air Purifier</a></li>
+            <!-- <li><a href="airpurifier.html">Air Purifier</a></li> -->
+             <li><a href="contact-us.html">Our Services</a></li>
             <li><a href="face-mask.html">Learn</a></li>
             <li><a href="news.html">News</a></li>
-            <li><a href="contact-us.html">About Us</a></li>
+            <!-- <li><a href="contact-us.html">About Us</a></li> -->
+             <li><a href="touch.html" id="contact-btn">Contact Us</a></li>
         </ul>
         <div class="hamburger" onclick="toggleMenu()">
             <span></span>
