--- a/index.html
+++ b/index.html
@@ -68,10 +68,14 @@
      <h1 class="visually-hidden">Tecsage Innovations Pvt. Ltd.</h1> <!-- this keeps it SEO-friendly but hidden visually -->
      <ul class="nav-links">
         <li><a href="airmonitor.html">Air Monitor</a></li>
-        <li><a href="airpurifier.html">Air Purifier</a></li>
+        <li><a href="contact-us.html">Our Services</a></li>
+        
+
+        <!-- <li><a href="airpurifier.html">Air Purifier</a></li> -->
         <li><a href="face-mask.html">Learn</a></li>
         <li><a href="news.html">News</a></li>
-        <li><a href="contact-us.html">About Us</a></li>
+        <li><a href="touch.html" id="contact-btn">Contact Us</a></li>
+
      </ul>
     <div class="hamburger" onclick="toggleMenu()">
       <span></span>
