--- a/touch.html
+++ b/touch.html
@@ -47,7 +47,7 @@
     </nav>
 
     
-    <section class="contact-us-banner">
+    <!-- <section class="contact-us-banner">
       <img src="./assets/CONTACT-NEW-PHOTO.jpeg" alt="Contact Us Banner" />
       <div class="overlay"></div>
       <div class="contact-us-text">
@@ -60,7 +60,7 @@
           ><button class="contact-us-btn">Contact Us</button></a
         >
       </div>
-    </section>
+    </section> -->
 
 
     <div id="contact_container" class="contact_container">
@@ -70,7 +70,7 @@
   src="https://lottie.host/e6ea21df-3e5a-48e2-bd99-98c2e97a65d9/YKSbzbl6Qv.lottie"
   background="transparent"
   speed="1"
-  style=" height: 500px"
+  style=" height: 400px"
   loop
   autoplay
 ></dotlottie-player>
