--- a/contact-us.html
+++ b/contact-us.html
@@ -35,11 +35,11 @@
   <body>
     <nav class="navbar">
       <!-- <a href="index.html" class="logo">Tecsage Innovation</a> -->
-      <a href="index.html"><img src="assets/tecsage-logo.png" alt="Company Logo" width="170">
+      <a href="index.html"><img src="assets/tecsage-blue-logo.png" alt="Company Logo" width="170">
       <ul class="nav-links">
         <li><a href="airmonitor.html">Air Monitor</a></li>
         <!-- <li><a href="airpurifier.html">Air Purifier</a></li> -->
-         <li><a href="contact-us.html">Our Services</a></li>
+         <li><a href="contact-us.html">Services</a></li>
         <li><a href="face-mask.html">Learn</a></li>
         <li><a href="news.html">News</a></li>
         <!-- <li><a href="contact-us.html">About Us</a></li> -->
@@ -54,22 +54,17 @@
 
     <section class="carousel-section">
       <div class="carousel">
+         <img class="carousel-image" id="sw-5" src="assets/sw5.jpg" alt="image 4">
         <img class="carousel-image" src="./assets/hard1.jpg" alt="Image 1" />
-        <img
-          class="carousel-image"
-          src="./assets/shivam (3).jpeg"
-          alt="Image 2"
-        />
-        <img
-          class="carousels-image"
-          src="./assets/mayank (4).jpg"
-          alt="Image 3"
-        />
+        <img class="carousel-image" src="./assets/shivam (3).jpeg" alt="Image 2" />
+        
         <img
           class="carousel-image"
           src="./assets/sanjeev_hard.jpg"
-          alt="Image 4"
+          alt="Image 3"
         />
+       
+
         <!-- <img class="carousel-image" src="assets/t1.jpeg" alt="">
         <img class="carousel-image" src="assets/t2.jpeg" alt="">
         <img class="carousel-image" src="assets/t3.jpeg" alt=""> -->
