--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
   <nav class="navbar">
     <!-- <a href="index.html" class="logo">Tecsage Innovation</a> -->
    
-     <a href="index.html"><img src="assets/tecsage-logo.png" alt="Tecsage Innovations Logo" width="170"></a>
+     <a href="index.html"><img src="assets/tecsage-blue-logo.png" alt="Tecsage Innovations Logo" width="170"></a>
      <h1 class="visually-hidden">Tecsage Innovations Pvt. Ltd.</h1> <!-- this keeps it SEO-friendly but hidden visually -->
      <ul class="nav-links">
         <li><a href="airmonitor.html">Air Monitor</a></li>
-        <li><a href="contact-us.html">Our Services</a></li>
+        <li><a href="contact-us.html">Services</a></li>
         
 
         <!-- <li><a href="airpurifier.html">Air Purifier</a></li> -->
@@ -215,7 +215,7 @@
         <!--change is css file object file -->
         <h5>AQI Monitoring</h5>
         <p>Precise indoor air quality data monitoring using AQMS technology, tracking pollutants like PM2.5, VOCs, and CO₂.</p>
-        <a href="#">Read more</a>
+        <!-- <a href="#">Read more</a> -->
       </div>
   
       <!-- Card 2 -->
@@ -224,7 +224,7 @@
         style="object-fit: contain;">
         <h5>Data Insights</h5>
         <p>Detailed air quality reports and analysis to help identify trends and improve your spaces.</p>
-        <a href="#">Read more</a>
+        <!-- <a href="#">Read more</a> -->
       </div>
   
       <!-- Card 3 -->
@@ -232,7 +232,7 @@
         <img src="assets/15.avif" alt="Customized Solutions">
         <h5>Customized Solutions</h5>
         <p>Tailored solutions and expert advice to improve air quality based on your environment.</p>
-        <a href="#">Read more</a>
+        <!-- <a href="#">Read more</a> -->
       </div>
     </div>
   </div>
@@ -280,23 +280,12 @@
                 <p>Our Network, Support, and IT teams collaborate seamlessly to ensure accurate, real-time transmission of AQI data from sensors. This joint effort guarantees the efficient flow of information to provide you with the best service possible. By handling the data effectively, we deliver reliable updates on air quality. These updates help you make informed decisions about your health and outdoor activities. Together, we aim to improve your experience with timely, accurate AQI information.</p>
             </div>
             <div class="feature-card1-right">
-                <img src="./assets/t3.jpeg" alt="" class="card1-slider">
+                <img src="./assets/feature-1.jpg" alt="" class="card1-slider">
             </div>
         </div>
 
         </div>
-        <div class="carousel-item">
-          <div class="feature-card2">
-            <div class="feature-card2-left">
-              <h3>Parameters and Software tools for providing better experience</h3>
-              <p>To provide a better experience, we utilize key parameters such as real-time data accuracy, sensor calibration, and network reliability to ensure smooth data transmission. Our teams leverage advanced software tools like data analytics platforms, cloud services, and monitoring dashboards to process and display AQI data efficiently. These tools help in tracking air quality updates and delivering timely, actionable insights.  </p>
-            </div>
-            <div class="feature-card2-right">
-                <img src="./assets/software_pic.png" alt="" class="card2-slider" style=" width: 350px;">
-            </div>
-        </div>
-
-        </div> 
+        
         <div class="carousel-item">
           <div class="feature-card3">
             <div class="feature-card3-left">
@@ -309,6 +298,19 @@
         </div>
 
         </div>
+
+        <div class="carousel-item">
+          <div class="feature-card2">
+            <div class="feature-card2-left">
+              <h3>Parameters and Software tools for providing better experience</h3>
+              <p>To provide a better experience, we utilize key parameters such as real-time data accuracy, sensor calibration, and network reliability to ensure smooth data transmission. Our teams leverage advanced software tools like data analytics platforms, cloud services, and monitoring dashboards to process and display AQI data efficiently. These tools help in tracking air quality updates and delivering timely, actionable insights.  </p>
+            </div>
+            <div class="feature-card2-right">
+                <img src="./assets/software_pic.png" alt="" class="card2-slider" style=" width: 350px;">
+            </div>
+        </div>
+
+        </div> 
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
