--- a/airpurifier.html
+++ b/airpurifier.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head>+0
+    ;'
+    ;bmn1  '
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tecsage Innovations</title>
