--- a/airmonitor.html
+++ b/airmonitor.html
@@ -113,7 +113,7 @@
       
         <section class="pollutants">
             <div class="upper-section">
-                <p>The inner air quality monitors make it easy to understand what's in your air</p>
+                <p>The indoor air quality monitors make it easy to understand what's in your air</p>
             </div>
             <!-- <div class="lower-section">
                 <div class="lower-pollutant">
