--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
       <div class="mobile_desc animate-fadeInUp">
         <h3>Mobile App</h3>
         <h4>Seamless Connectivity</h4>
-        <p>Your 24/7 inner air quality guardian
+        <p>Your 24/7 indoor air quality guardian
           Real-time pollution alerts on mobile
           Customized for your health needs
           Clean air awareness in your hand </p>
