--- a/About-us.html
+++ b/About-us.html
@@ -6,7 +6,7 @@
     <title>Tecsage Innovations</title>
     <!-- <title>Document</title> -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="contact-us.css" />
+    <link rel="stylesheet" href="About-us.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -35,13 +35,14 @@
   <body>
     <nav class="navbar">
       <!-- <a href="index.html" class="logo">Tecsage Innovation</a> -->
-      <a href="index.html"><img src="assets/tecsage-blue-logo.png" alt="Company Logo" width="170">
+      <img src="assets/tecsage-blue-logo.png" alt="Company Logo" width="170">
       <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
         <li><a href="airmonitor.html">Air Monitor</a></li>
         <!-- <li><a href="airpurifier.html">Air Purifier</a></li> -->
-         <li><a href="contact-us.html">Services</a></li>
+         <li><a href="About-us.html">About Us</a></li>
         <li><a href="face-mask.html">Learn</a></li>
-        <li><a href="news.html">News</a></li>
+        <!-- <li><a href="news.html">News</a></li> -->
         <!-- <li><a href="contact-us.html">About Us</a></li> -->
          <li><a href="touch.html" id="contact-btn">Contact Us</a></li>
       </ul>
@@ -54,20 +55,10 @@
 
     <section class="carousel-section">
       <div class="carousel">
-         <img class="carousel-image" id="sw-5" src="assets/sw5.jpg" alt="image 4">
+         <img class="carousel-image active" id="sw-5" src="assets/sw5.jpg" alt="image 4">
         <img class="carousel-image" src="./assets/hard1.jpg" alt="Image 1" />
         <img class="carousel-image" src="./assets/shivam (3).jpeg" alt="Image 2" />
-        
-        <img
-          class="carousel-image" 
-          src="./assets/sanjeev_hard.jpg"
-          alt="Image 3"
-        />
-       
-
-        <!-- <img class="carousel-image" src="assets/t1.jpeg" alt="">
-        <img class="carousel-image" src="assets/t2.jpeg" alt="">
-        <img class="carousel-image" src="assets/t3.jpeg" alt=""> -->
+        <img class="carousel-image" src="./assets/sanjeev_hard.jpg" alt="Image 3" /> 
       </div>
     </section>
 
@@ -282,7 +273,7 @@
 
      <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="script.js"></script
+    <script src="script.js"></script>
   
   </body>
 </html>
