--- a/touch.html
+++ b/touch.html
@@ -29,22 +29,28 @@
 <body>
 
     <nav class="navbar">
-      <!-- <a href="index.html" class="logo">Tecsage Innovation</a> -->
-      <a href="index.html"><img src="assets/tecsage-blue-logo.png" alt="Company Logo" width="170">
-      <ul class="nav-links">
+    <!-- <a href="index.html" class="logo">Tecsage Innovation</a> -->
+   
+     <img src="assets/tecsage-blue-logo.png" alt="Tecsage Innovations Logo" width="170">
+     <h1 class="visually-hidden">Tecsage Innovations Pvt. Ltd.</h1> <!-- this keeps it SEO-friendly but hidden visually -->
+     <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
         <li><a href="airmonitor.html">Air Monitor</a></li>
-        <li><a href="contact-us.html">Services</a></li>
+        <li><a href="About-us.html">About Us</a></li>
+        
+
         <!-- <li><a href="airpurifier.html">Air Purifier</a></li> -->
         <li><a href="face-mask.html">Learn</a></li>
-        <li><a href="news.html">News</a></li>
+        <!-- <li><a href="news.html">News</a></li> -->
         <li><a href="touch.html" id="contact-btn">Contact Us</a></li>
-      </ul>
-      <div class="hamburger" onclick="toggleMenu()">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </nav>
+
+     </ul>
+    <div class="hamburger" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </nav>
 
     
     <!-- <section class="contact-us-banner">
