--- a/About-us.html
+++ b/About-us.html
@@ -66,7 +66,7 @@
       <h3>INTRODUCING</h3>
       <h2>AN INNOVATIVE GREEN TECHNOLOGY STARTUP</h2>
       <p>with mission to reduce pollution</p>
-      <button class="intro_button" ><a href="./contact-us.html">Know more</a></button>
+      <button class="intro_button" ><a href=".products_services">Know more</a></button>
       <a href=""></a>
     </div>
 
