--- a/airmonitor.html
+++ b/airmonitor.html
@@ -109,7 +109,7 @@
 
         <div class="air-monitor-btn">
             <!-- <button class="banner-text-btn"><p>Contact Us</p></button> -->
-             <a href="#contact_us.html"></a>
+             <a href="About-us.html"></a>
             <dotlottie-player
   src="https://lottie.host/32e99c9c-d833-4dfc-8f50-19ab2521dcab/DgSL4JJuDk.lottie"
   background="transparent"
@@ -117,7 +117,7 @@
   style="width: 200px; height: 150px; cursor: pointer;"
   loop
   autoplay
-  onclick="window.location.href='contact-us.html';"
+  onclick="window.location.href='About-us.html';"
 ></dotlottie-player>
 
 
@@ -258,7 +258,7 @@
       </div>
     </div>
   </div>
-</div>
+            </div>
 
         </section>
         
