--- a/airmonitor.html
+++ b/airmonitor.html
@@ -45,6 +45,8 @@
         </div>
     </nav> 
 
+     <div id="cursor" ></div>
+
      <section class="indoor-air-quality">
     <h2 class="title">Why Indoor Air Quality Matters?</h2>
 
@@ -455,6 +457,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
   
     <script>
     AOS.init({
@@ -505,10 +508,25 @@ data.forEach(row => {
   `;
   tableBody.appendChild(tr);
 });
+
+
+ var cursor = document.querySelector("#cursor");
+
+document.addEventListener("mousemove", function (dets) {
+  gsap.to(cursor, {
+    x: dets.x ,
+    y: dets.y,
+    duration: 0.5,
+    // ease: "power1.out",
+    ease: "back.out"
+    
+  });
+})
     
     </script>
 
 <script src="script.js"></script>
+
 
 
 <!-- <script>
