Initial commit for AQMS-WEBSITE

--- a/index.html
+++ b/index.html
@@ -101,13 +101,15 @@
           </h1>
           <p>AN INNOVATIVE GREEN TECHNOLOGY STARTUP
              with mission to reduce pollution and contribute to a cleaner, healthier environment for future generations.</p>
-          <button class="btn-primary" id="scrollButton">
+          <!-- <button class="btn-primary" id="scrollButton" >
             <a href="./touch.html">Get in Touch</a>
-          </button>
+          </button> -->
+          <a href="./touch.html" class="btn-primary" id="scrollButton">Get in Touch</a>
+
         </div>
         
         <div class="image-section" id="nature_inspired_inovation">
-          <img src="assets/s10.png" alt="">
+          <img src="assets/images/main-image.png" alt="">
           <!-- <img src="assets/Untitled design (10).png" alt="Tecsage Technovations"> -->
           <!-- <img id="a2" src="assets/a2.png" alt=""> -->
             <!-- <div class="slider-container">
@@ -192,8 +194,8 @@
   
       <!-- Card 2 -->
       <div class="service-card">
-        <img src="assets/D2.jpg" alt="Data Insights" 
-        style="object-fit: contain;">
+        <img src="assets/images/co2-graph.jpeg" alt="Data Insights" 
+        style="object-fit: contain;" id="s2">
         <h5>Data Insights</h5>
         <p>Detailed air quality reports and analysis to help identify trends and improve your spaces.</p>
         <!-- <a href="#">Read more</a> -->
@@ -348,7 +350,7 @@
 <div class="demo-container">
   <div class="demo-container-content">
     <div class="demo-container-content-left">
-      <img src="./assets/LAPTOP_PIC.png" alt="">
+      <img src="./assets/images/laptop-data.png" alt="">
     </div>
 
     <div class="demo-container-content-right">
