console script error resolve

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Tecsage Innovations Pvt. Ltd. offers advanced air monitoring systems, air purifiers, and IoT-driven environmental solutions for a cleaner tomorrow.">
-  <title>Tecsage Innovations</title>
+  <!-- <meta name="description" content="Tecsage Innovations Pvt. Ltd. offers advanced air monitoring systems, air purifiers, and IoT-driven environmental solutions for a cleaner tomorrow.">
+  <title>Tecsage Innovations</title> -->
+  <meta name="description" content="Tecsage Innovation offers advanced indoor air monitoring systems, air purifiers, and IoT-driven environmental solutions for a cleaner tomorrow." />
+  <meta name="keywords" content="Tecsage Innovation, tecsage innovations, air quality monitoring, AQMS, IoT pollution sensors, air purifier, environment technology" />
+  <meta name="author" content="Tecsage Innovation Pvt. Ltd." />
+  <title>Tecsage Innovation | Smart Air Monitoring Solutions</title>
+
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
