update contact details and favicon

--- a/touch.html
+++ b/touch.html
@@ -87,11 +87,11 @@
         <div class="contact_details">
           <div class="contact_detail">
             <img src="./assets/phone.png" alt="Phone Icon" />
-            <p>+91 99715 88638</p>
+            <p>+91 9599498638</p>
           </div>
           <div class="contact_detail">
             <img src="./assets/email.png" alt="Email Icon" />
-            <p>director@tecsageinnovations.com</p>
+            <p>support@tecsageinnovations.com</p>
           </div>
           
         </div> 
