device pic update

--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
     <div class="services-cards">
       <!-- Card 1 -->
       <div class="service-card">
-        <img src="assets/s1.png" alt="AQI Monitoring">
+        <img src="assets/iaqms-device.png" alt="AQI Monitoring">
         <!--change is css file object file -->
-        <h5>AQI Monitoring</h5>
-        <p>Precise indoor air quality data monitoring using AQMS technology, tracking pollutants like PM2.5, VOCs, and CO₂.</p>
+        <h5>Air Quality Monitor</h5>
+        <p>Precise indoor air quality data monitoring using AQMS technology, tracking pollutants like PM2.5, PM10,CO₂, TVOC,Temp., Humidity, AQI</p>
         <!-- <a href="#">Read more</a> -->
       </div>
   
